# tuneperf

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_appimage.sh  build_deb.sh  build_static.sh  build_static_deb.sh  build_static_tar.sh  build_tar.sh  setup-tqt3-static.sh  tuneperf.sh
libs/concurrent/: tqtconcurrent.cpp  tqtconcurrent.h
libs/process/: tqtprocess.cpp  tqtprocess.h
libs/progress-circle/: tqtprogresscircle2.cpp  tqtprogresscircle2.h
libs/slidingstackedwidget/: tqtslidingstackedwidget.cpp  tqtslidingstackedwidget.h
libs/toggle-buttons/: tqttoggleswitch.cpp  tqttoggleswitch.h
libs/tqt3-static/: .gitignore
scripts/: build_assets.py
src/: CMakeLists.txt  customtabwidget.cpp  customtabwidget.h  embedded_assets_compat.cpp  embedded_icons.h  embedded_images_data.cpp  embedded_images_data.h  main.cpp  mainwindow.cpp  mainwindow.h  passworddialog.cpp  passworddialog.h  tqt_compat_static.h  translationmanager.cpp  translationmanager.h  tuneperf_runner.cpp  tuneperf_runner.h  zx0em_blob_data.c  zx0em_blob_data.h  zx0em_index.h  zx0em_runtime.h
src/translations/: de.txt  en.txt  es.txt  fr.txt  it.txt  pl.txt
src/zx0/: zx0_decompress.c  zx0_decompress.h
